// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render CommentsList component correctly 1`] = `
<DocumentFragment>
  <div
    class="comments-section__list"
  >
    CommentComment
  </div>
</DocumentFragment>
`;

exports[`Should render CommentsList component correctly with empty comments array 1`] = `
<DocumentFragment>
  <div
    class="comments-section__list"
  >
    <div
      class="comments-section__empty-list"
    >
      -NO COMMENTS-
    </div>
  </div>
</DocumentFragment>
`;
